--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,11 @@
     font-size: 2rem;
 
 }
+
+.new-cases-span {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 13px;
+    font-weight: 400;
+}
