Fixed the footer issues, added liks to the card

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,11 @@
     font-size: 13px;
     font-weight: 400;
 }
+
+.card-link{
+    text-decoration: none;
+}
+
+.card-link:hover{
+    text-decoration: none;
+}
