--- a/src/App.css
+++ b/src/App.css
@@ -44,10 +44,17 @@
 
 .card-link{
     text-decoration: none;
+	font-size: 1.5rem;
+	font-family: Sen,sans-serif;
+	font-weight: 400;
+	line-height: 1.334;
+	color: #27273f;
+
 }
 
 .card-link:hover{
     text-decoration: none;
+    color: #27273f;
 }
 
 .android-container {
